tests/compiler/unterminatedStringLiteralWithBackslash1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.3/tests/cases/compiler/unterminatedStringLiteralWithBackslash1.ts`, Apache-2.0 License

"\ //~ERROR: Unterminated string literal.